cmake: fix dependency issue in lib(hip/cu)smm

--- a/src/acc/libsmm_acc/libcusmm/CMakeLists.txt
+++ b/src/acc/libsmm_acc/libcusmm/CMakeLists.txt
@@ -9,17 +9,17 @@ set(CUSMM_KERNELS
   kernels/cusmm_transpose.h
 )
 
-add_custom_command(
+add_custom_target(generate_parameters
   COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_parameters.py --gpu_version=${WITH_GPU} --base_dir=${CMAKE_CURRENT_SOURCE_DIR}
   DEPENDS generate_parameters.py parameters_${WITH_GPU}.json
-  OUTPUT parameters.h
+  BYPRODUCTS parameters.h
   COMMENT "libcusmm: generating parameters for GPU ${WITH_GPU}"
 )
 
-add_custom_command(
+add_custom_target(generate_kernels
   COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_kernels.py ${CMAKE_CURRENT_SOURCE_DIR}/kernels
   DEPENDS generate_kernels.py ${CUSMM_KERNELS}
-  OUTPUT cusmm_kernels.h
+  BYPRODUCTS cusmm_kernels.h
   COMMENT "libcusmm: generating kernels"
 )
 
@@ -29,6 +29,7 @@ add_library(libcusmm OBJECT
   parameters.h
   cusmm_kernels.h
   )
+add_dependencies(libcusmm generate_parameters generate_kernels)
 
 if (OpenMP_FOUND)
   # with CMake 3.12+ the following can be replaced by:
