tight binding example using linear scaling and matrix sign function from the linear algebra part of DBCSR

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -9,11 +9,13 @@ FCFLAGS    = $(FLAGS) $(INCLUDES) -fno-omit-frame-pointer \
              -funroll-loops -ffree-form -std=f2008ts -fimplicit-none
 CXXFLAGS   = $(FLAGS) $(INCLUDES) -std=c++11
 LIBS       = -L$(DBCSRDIR)/lib -ldbcsr
-LIBS      += -L${LAPACK_PATH}/lib -llapack -lblas
+LIBS      += -lscalapack -L${LAPACK_PATH}/lib -llapack -lblas
+#LIBS +=  -lscalapack
 # Add the MPI Fortran library (check with `mpifort -show`):
 # OpenMPI : -lmpi_mpifh
 # MPICH   : -lmpifort
 CLIBS      = $(LIBS) -lgfortran -lmpi_mpifh
+
 
 # Fortran examples
 all: dbcsr_example_1.x dbcsr_example_2.x dbcsr_example_3.x
@@ -23,8 +25,10 @@ ifneq (,$(wildcard $(DBCSRDIR)/include/dbcsr.h))
 all: dbcsr_example_3_cpp.x
 endif
 
-%.x: %.F
+
+%.x: %.F 
 	$(FC) $(FCFLAGS) $< $(LIBS) -o $@
+
 
 %_cpp.x: %.cpp
 	$(CXX) $(CXXFLAGS) $< $(CLIBS) -o $@
