Rename libsmm -> libsmm_acc, cuda -> GPU and minor fixes
- Update notebook texts
- cmake: add AMD Mi50
- Improve error detection and message in predict helper function

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
   - id: check-ast
     stages: [manual]
     language_version: "python2"
-    exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict|notebooks)_'
+    exclude: '^src/acc/libsmm_acc/(notebooks|predict|tune)/'
   - id: flake8
     language_version: "python3"
   - id: check-ast
