libsmm_acc: fix warpsize AMD in kernels
Read warp_size in kernels from gpu_properties.json
- Why: Some GPU kernels in libsmm_acc need to know the GPU's warp size. Up to now, this information was simply hard-coded in each kernel (`const int warp_size = 32;`). However, AMD GPUs have a warp size of 64, not 32, and this needs to be reflected in the kernel code.
- How: The warpSize is defined in the `parameter.h` header, generated through a python script at compile time, which reads the warp size from `gpu_properties.json`
- Add check: at initialization of dbcsr library, check whether the warp size as recorded in the JSON file and the warp size as returned from the CUDA/HIP API are equal, to verify consistency.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -278,7 +278,7 @@ endif ()
 if (USE_HIP)
 
   if (OpenMP_FOUND)
-    set(HIP_HIPCC_FLAGS "${HIP_HIPCC_FLAGS} -fopenmp")
+    set(HIP_HIPCC_FLAGS "${HIP_HIPCC_FLAGS} ${OpenMP_CXX_FLAGS}")
   endif ()
 
   # add libsmm_acc which has its own CMakeLists.txt due to code generation
