--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ set(DBCSR_PERF_SRCS
   dbcsr_performance_multiply.F)
 if (USE_HIP)
   hip_add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
+  target_link_options(dbcsr_perf PRIVATE ${HIP_ARCH_FLAGS})
 else ()
   add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
 endif ()
@@ -79,6 +80,7 @@ target_link_libraries(dbcsr_unittest_common dbcsr)
 foreach (dbcsr_test ${DBCSR_TESTS})
   if (USE_HIP)
     hip_add_executable(${dbcsr_test} ${${dbcsr_test}_SRCS})
+    target_link_options(${dbcsr_test} PRIVATE ${HIP_ARCH_FLAGS})
   else ()
     add_executable(${dbcsr_test} ${${dbcsr_test}_SRCS})
   endif ()
@@ -156,8 +158,11 @@ if (USE_CUDA OR USE_HIP)
     endforeach ()
 
     hip_add_executable(libsmm_acc_unittest_multiply ${CMAKE_CURRENT_BINARY_DIR}/libsmm_acc_unittest_multiply.cpp)
+    target_link_options(libsmm_acc_unittest_multiply PRIVATE ${HIP_ARCH_FLAGS})
     hip_add_executable(libsmm_acc_timer_multiply ${CMAKE_CURRENT_BINARY_DIR}/libsmm_acc_timer_multiply.cpp)
+    target_link_options(libsmm_acc_timer_multiply PRIVATE ${HIP_ARCH_FLAGS})
     hip_add_executable(libsmm_acc_unittest_transpose libsmm_acc_unittest_transpose.cpp)
+    target_link_options(libsmm_acc_unittest_transpose PRIVATE ${HIP_ARCH_FLAGS})
 
     # Workaround issue in hip_add_library: explicitely write dependency between __ & __
     add_custom_target(generate_libsmm_acc_unittest_multiply_test_cpp DEPENDS libsmm_acc_unittest_multiply.cpp)
