added test to cmake, fixes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ set(DBCSR_TESTS
   dbcsr_unittest3
   dbcsr_tensor_unittest
   dbcsr_test_csr_conversions
+  dbcsr_la_test
   )
 
 # Common object files linked to all tests
@@ -64,6 +65,7 @@ set(dbcsr_unittest2_SRCS dbcsr_unittest2.F)
 set(dbcsr_unittest3_SRCS dbcsr_unittest3.F)
 set(dbcsr_tensor_unittest_SRCS dbcsr_tensor_unittest.F)
 set(dbcsr_test_csr_conversions_SRCS dbcsr_test_csr_conversions.F)
+set(dbcsr_la_test_SRCS dbcsr_la_test.F)
 
 # instead of building a full-blown lib, it would be better to simply build an OBJECT lib,
 # but we would need cmake 3.12 to be able to specify target_link_libraries on those to get
