Ensure CMake attempts to determine the version/vendor string of the MPI component (MPI_DETERMINE_LIBRARY_VERSION=true). Define __HAS_NO_MPI_MOD preprocessor variable if non-Intel (Fortran-)compiler but Intel MPI is used. Apply -D__HAS_NO_MPI_MOD on a global basis. Support __HAS_NO_MPI_MOD (examples).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ find_package(PkgConfig)
 if (USE_MPI)
   get_property(REQUIRED_MPI_COMPONENTS GLOBAL PROPERTY ENABLED_LANGUAGES)
   list(REMOVE_ITEM REQUIRED_MPI_COMPONENTS CUDA)  # CUDA does not have a MPI component
+  set(MPI_DETERMINE_LIBRARY_VERSION true)  # prior to find_package
   find_package(MPI COMPONENTS ${REQUIRED_MPI_COMPONENTS} REQUIRED)
 endif ()
 
@@ -104,6 +105,12 @@ foreach(line ${VERSION_INFO})
     continue ()
   endif ()
 endforeach()
+
+# must be global since modified FLAGS apply to other subdirectories as well, e.g., examples
+# must be after include(CompilerConfiguration) due to modifying CMAKE_Fortran_FLAGS
+if (MPI_FOUND AND (MPI_Fortran_LIBRARY_VERSION_STRING MATCHES "Intel") AND (NOT ${CMAKE_Fortran_COMPILER_ID} MATCHES "Intel"))
+  STRING(REGEX REPLACE "-std=.[^ ]*" "-D__HAS_NO_MPI_MOD" CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS})
+endif ()
 
 add_subdirectory(src)
 add_subdirectory(tests)
