Makefile: adapt to new ACC backend and document AMD options

--- a/tests/libsmm_acc_timer_multiply.cpp.template
+++ b/tests/libsmm_acc_timer_multiply.cpp.template
@@ -12,9 +12,9 @@
 #include <vector>
 #include <array>
 #include <algorithm>
-#include "acc/libsmm_acc/libsmm_acc_benchmark.h"
-#include "acc/libsmm_acc/libsmm_acc.h"
-#include "acc/libsmm_acc/parameters.h"
+#include "../src/acc/libsmm_acc/libsmm_acc_benchmark.h"
+#include "../src/acc/libsmm_acc/libsmm_acc.h"
+#include "../src/acc/libsmm_acc/parameters.h"
 
 std::vector<Triplet> combinations(std::vector<int> to_combine){
 
