--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,15 +23,20 @@ endforeach ()
 if (WITH_C_API)
   if (USE_HIP)
     hip_add_executable(dbcsr_example_3_cpp dbcsr_example_3.cpp)
+    hip_add_executable(dbcsr_tensor_example_1_cpp dbcsr_tensor_example_1.cpp)
   else ()
     add_executable(dbcsr_example_3_cpp dbcsr_example_3.cpp)
+    add_executable(dbcsr_tensor_example_1_cpp dbcsr_tensor_example_1.cpp)
   endif ()
   target_link_libraries(dbcsr_example_3_cpp dbcsr_c MPI::MPI_CXX)
+  target_link_libraries(dbcsr_tensor_example_1_cpp dbcsr_c MPI::MPI_CXX)
 
   if (CMAKE_CXX_COMPILER_ID STREQUAL "Cray")
     # for recent Cray compiler versions CMake doesn't know
     target_compile_options(dbcsr_example_3_cpp PRIVATE "-hstd=c++14")
+    target_compile_options(dbcsr_tensor_example_1_cpp PRIVATE "-hstd=c++14")
   else ()
     target_compile_features(dbcsr_example_3_cpp PRIVATE cxx_std_14)
+    target_compile_features(dbcsr_tensor_example_1_cpp PRIVATE cxx_std_14)
   endif ()
 endif ()
