Updated workaround for CMake <3.16 (passes with 3.16.0-rc4).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -221,9 +221,8 @@ function(CUDA_CONVERT_FLAGS EXISTING_TARGET)
 endfunction()
 
 if (USE_CUDA)
-  # issue seems to be present even with CMake 3.14.5 in some environments
-  #if (${CMAKE_VERSION} VERSION_LESS 3.13)
-      # workaround for CUDA support with CMake <3.13, see also
+  if (${CMAKE_VERSION} VERSION_LESS 3.16)
+      # workaround for CUDA support with CMake <3.16, see also
       # see https://gitlab.kitware.com/cmake/cmake/issues/17929
       # and https://cliutils.gitlab.io/modern-cmake/chapters/packages/CUDA.html
       if (OpenMP_FOUND)
@@ -232,7 +231,7 @@ if (USE_CUDA)
       if (MPI_FOUND)
         cuda_convert_flags(MPI::MPI)
       endif ()
-  #endif ()
+  endif ()
 
   target_link_libraries(dbcsr PUBLIC cuda)
 
