cmake: fix target_link_libraries on CMake<3.12
fixes #266

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -247,7 +247,9 @@ if (USE_CUDA)
   target_sources(dbcsr PRIVATE $<TARGET_OBJECTS:acc>)
   if (USE_CUBLAS)
     target_compile_definitions(acc PRIVATE __DBCSR_ACC=2)
-    target_link_libraries(acc PRIVATE ${CUBLAS})
+    # with CMake 3.12+ the following can be replaced by:
+    #   target_link_libraries(acc PRIVATE ${CUBLAS})
+    set_target_properties(acc PROPERTIES INTERFACE_LINK_LIBRARIES ${CUBLAS})
   else ()
     target_compile_definitions(acc PRIVATE __DBCSR_ACC)
   endif ()
